feat: #24 [US19] - récupérer trajet avec code unique
